examples/test/testpolicy17085.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17085
  namespace: namespace361
spec:
  podSelector:
    matchLabels:
      key18: value17
      key28: value32
      key49: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value32
          key12: value4
          key10: value49
